Fixed colors cells position in constraints and shifts graphs

--- a/src/app/components/statistics/statisticsConstraints/statisticsConstraints.css
+++ b/src/app/components/statistics/statisticsConstraints/statisticsConstraints.css
@@ -13,9 +13,9 @@
 }
 
 .colorsCellsContainer {
+    position: absolute;
     left: 60px;
-    position: fixed;
-    top: 75px;
+    top: 120px;
 }
 
 .colorsCellsContainer > div {
